[package]
name = "jt-airdrop-controller"
version = "0.2.0"
authors = ["Orkun Külçe <orkunkl@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
cw20 = { version = "0.12.1" }
cw-utils = { version = "0.12.1" }
cw20-merkle-airdrop = { branch = "upgrade-0.12", git = "https://github.com/CosmWasm/cw-tokens", features = ["library"]}
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta5" }
cw-multi-test = "0.12.1"
cw20-base = { version = "0.12.1", features = ["library"] }
cw20-merkle-airdrop = { branch = "upgrade-0.12", git = "https://github.com/CosmWasm/cw-tokens"}
